# Jupiter---Black

mycode/apps/base/: CMakeLists.txt  prj.conf
mycode/apps/base/src/: main.c
mycode/apps/smart_batch/: CMakeLists.txt  prj.conf
mycode/apps/smart_batch/src/: main.c
mycode/apps/test/blinky/src/: main.c
mycode/include/: ble_receive.h  ble_receive_mobile.h  ble_send.h  hci.h  lis2dh.h  motion_detect.h  mpu9250.h  speaker.h  uart.h
mycode/mylib/: ble_receive.c  ble_receive_mobile.c  ble_send.c  hci.c  motion_detect.c  speaker.c  uart.c
mycode/mylib/sensors/: lis2dh.c  mpu9250.c
mycode/mylib/webapp/: functions.js  package-lock.json  package.json
mycode/mylib/webapp/src/: App.js  icons.js
mycode/mylib/webapp/src/components/: activity-icon.js  activityIcon.js  custom-button.js  custom-entry.js  header.js
mycode/mylib/webapp/src/data/: icons.js  serial-server.js  styles.css
mycode/mylib/webapp/src/pages/: Home.js
